# AdventOfRust2016

./: .gitignore  Cargo.toml  LICENSE.md  Notes  README.md
src/: common.rs
