[package]
authors = ["David Sullins <david.sullins@gmail.com>"]
description = "Advent of Code 2016 solutions in Rust"
license = "MIT"
name = "AdventOfRust2016"
version = "0.1.0"

[dependencies]
futures = "0.1.7"
futures-cpupool = "0.1.2"
lazy_static = "0.2"
md5 = "0.3"
permutohedron = "0.2.2"
regex = "0.2"

[lib]
name = "common"
path = "src/common.rs"
